// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CriteriaRow should render type boolean 1`] = `
<DocumentFragment>
  <select
    class="form-control criterion-input form-control"
    data-testid="options-boolean"
  >
    <option
      value="true"
    >
      TRUE
    </option>
    <option
      value="false"
    >
      FALSE
    </option>
  </select>
</DocumentFragment>
`;

exports[`CriteriaRow should render type date 1`] = `
<DocumentFragment>
  <div
    class="criterion-input"
  >
    <input
      class="form-control"
      data-testid="date-input"
      type="date"
      value="2019-01-23"
    />
  </div>
</DocumentFragment>
`;

exports[`CriteriaRow should render type decimal number 1`] = `
<DocumentFragment>
  <input
    class="criterion-input form-control"
    data-testid="decimal-number"
    step="0.01"
    type="number"
    value="1.23"
  />
</DocumentFragment>
`;

exports[`CriteriaRow should render type integer number 1`] = `
<DocumentFragment>
  <input
    class="criterion-input form-control"
    data-testid="integer-number"
    type="number"
    value="1"
  />
</DocumentFragment>
`;

exports[`CriteriaRow should render type string with options 1`] = `
<DocumentFragment>
  <select
    class="form-control criterion-input form-control"
    data-testid="options-string"
  >
    <option
      value="defaultValue"
    >
      Default Value
    </option>
    <option
      value="Liferay"
    >
      LIFERAY
    </option>
  </select>
</DocumentFragment>
`;

exports[`CriteriaRow should render type string with value 1`] = `
<DocumentFragment>
  <input
    class="criterion-input form-control"
    data-testid="simple-string"
    type="text"
    value="defaultValue"
  />
</DocumentFragment>
`;

exports[`CriteriaRow should render with type string 1`] = `
<DocumentFragment>
  <input
    class="criterion-input form-control"
    data-testid="simple-string"
    type="text"
    value=""
  />
</DocumentFragment>
`;
